add fixed navbar and fix aboutme link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>portfolio da brunna</h1>
         </div>
         <nav>
-            <a href="#me" class="navlinks">
+            <a href="#" class="navlinks">
                 sobre mim
             </a>
             <a href="#projs" class="navlinks">
